# SemRAGent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
agents/: mcp-usage-procedure.md
catalog/: canonical-map.yml  eval-candidates.yml  eval-canonical-topics.json  locator.config.yml  metadata-contract.md  migration-map.md  routes.yml  tool-contract.md
docs/: AGENT_INSTALL.md  TRUST_CONTRACT.md  agent-setup.md  gpt-pro-review-brief.md  mvp-improvement-backlog.md
examples/licensing-framework/: README.md  expected-queries.json  locator.config.yml  topic-aliases.json
integrations/: claude-desktop-config.example.json  codex-config.example.toml
scripts/: install.ps1  install.sh  setup-workspace.ps1  smoke-install.ps1  smoke-install.sh  start-qdrant.ps1
tests/: test_catalog_search.py  test_freshness.py  test_local_bge_backend.py  test_markdown.py  test_semragent_product.py
workspace_docs_mcp/: __init__.py  authority_lint.py  catalog.py  cli.py  config.py  doctor.py  entities.py  eval.py  freshness.py  index_worker.py  local_bge_backend.py  markdown.py  mcp_server.py  model.py  qdrant_cli.py  runtime.py  score.py  search.py  source_index.py  vector.py
